--- a/src/static/index.html
+++ b/src/static/index.html
@@ -26,6 +26,11 @@
             </div>
             <div id="left_controls">
                 <div id="restart" class="material-icons"></div>
+
+                <div id="volume">
+                    <div id="central_dot"></div>
+                </div>
+
                 <div id="timer"></div>
             </div>
             <div id="fullscreen" style="display: block;"></div>
