+ Sound control element added + Change sound volume using Arrow up & down + Sound icon change animation added

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -27,18 +27,22 @@
             <div id="left_controls">
                 <div id="restart" class="material-icons"></div>
 
-                <div id="volume">
-                    <div id="central_dot"></div>
+                <div id="volume_block">
+                    <div id="volume">
+                        <div id="central_dot"></div>
+                    </div>
+
+                    <div class="volume_slider"></div>
                 </div>
 
-                <div id="timer"></div>
+                    <div id="timer"></div>
+                </div>
+                <div id="fullscreen" style="display: block;"></div>
             </div>
-            <div id="fullscreen" style="display: block;"></div>
         </div>
     </div>
-</div>
 
-<script src="main.js"></script>
+    <script src="main.js"></script>
 
 </body>
 </html>
