--- a/src/static/index.html
+++ b/src/static/index.html
@@ -21,9 +21,12 @@
         </div>
 
         <div id="controls">
-            <div id="progress_bar">
-                <div id="current_position"></div>
+            <div id="progress_bar_block">
+                <div id="progress_bar">
+                    <div id="current_position"></div>
+                </div>
             </div>
+
             <div id="left_controls">
                 <div id="restart" class="material-icons"></div>
 
@@ -32,7 +35,9 @@
                         <div id="central_dot"></div>
                     </div>
 
-                    <div class="volume_slider"></div>
+                    <div class="volume_slider">
+                        <div id="current_volume"></div>
+                    </div>
                 </div>
 
                     <div id="timer"></div>
